--- a/src/Website/website.html
+++ b/src/Website/website.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <div class="container">
 
       <input class="input" type="search" placeholder="Search..." />
       <div class="search"></div>
-
+      
     </div>
   </head>
 </html>
